--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,4 +1,14 @@
-@media(max-width:850px){
+@media(max-width:950px){
+  .main .imgMain{
+    max-width: 50rem;
+  }
+}
+
+@media(max-width:845px){
+  .main .imgMain{
+    max-width: 50rem;
+  }
+
   .header .imgHeader{
     max-width: 12rem
   }
