--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@ body{
   background-size: cover;
   font-family: 'Poppins', sans-serif;
   width: 100%;
-  height: auto;
+  height: 100vh;
 }
 
 .header{
